--- a/login-react/src/components/Users.css
+++ b/login-react/src/components/Users.css
@@ -6,13 +6,17 @@
 }
 .outerContainer h3{
     font-size: 40px;
+    margin-bottom: 20px;
 }
 .nameCards{
     width: 200px;
-    height: 250px;
+    height: 280px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     margin: 10px;
     font-size: 13px;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
 }
 .infoCard {
     padding: 10px;
@@ -25,4 +29,18 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+}
+.infoCard button{
+    background-color: rgb(107, 23, 23);
+    border: none;
+    color: white;
+    padding: 5px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 10px;
+}
+.infoCard button:hover{
+    opacity: 0.6;
+    cursor: pointer;
 }
