--- a/login-react/src/components/Home.css
+++ b/login-react/src/components/Home.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: maroon;
 }
 .homeWrapper h2{
     font-size: 55px;
