--- a/login-react/src/components/Users.css
+++ b/login-react/src/components/Users.css
@@ -3,10 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 .outerContainer h3{
     font-size: 40px;
     margin-bottom: 20px;
+    color: maroon;
 }
 .nameCards{
     width: 200px;
